<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".feature.login.view.ui.LoginActivity">

    <TextView
        android:id="@+id/activity_login_tv_title"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/thirty_two"
        android:text="@string/tv_login_text"
        app:layout_constraintBottom_toTopOf="@id/activity_login__et__email"
        app:layout_constraintLeft_toLeftOf="@id/activity_login__et__password"
        app:layout_constraintRight_toRightOf="@id/activity_login__et__password" />

    <EditText
        android:id="@+id/activity_login__et__email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/eight"
        android:ems="10"
        android:hint="@string/et_email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@id/activity_login__et__password"
        app:layout_constraintLeft_toLeftOf="@id/activity_login__et__password"
        app:layout_constraintRight_toRightOf="@id/activity_login__et__password" />

    <EditText
        android:id="@+id/activity_login__et__password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_password_hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/activity_login__btn__login"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eight"
        android:layout_marginLeft="@dimen/eight"
        android:background="@drawable/btn_default_selector"
        android:text="@string/btn_login_text"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        app:layout_constraintBaseline_toBaselineOf="@id/activity_login__tb__access_mode"
        app:layout_constraintEnd_toStartOf="@id/activity_login__tb__access_mode"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/activity_login__btn__register"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/eight"
        android:layout_marginRight="@dimen/eight"
        android:background="@drawable/btn_default_selector"
        android:text="@string/btn_register_text"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:visibility="invisible"
        app:layout_constraintBaseline_toBaselineOf="@id/activity_login__tb__access_mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/activity_login__tb__access_mode"
        tools:visibility="visible" />

    <ToggleButton
        android:id="@+id/activity_login__tb__access_mode"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_register_text"
        android:textAllCaps="false"
        android:textColor="@drawable/btn_text_color_selector"
        android:textOff="@string/btn_register_text"
        android:textOn="@string/btn_login_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/activity_login__btn__register"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/activity_login__btn__login"
        app:layout_constraintTop_toBottomOf="@id/activity_login__et__password" />

    <ProgressBar
        android:id="@+id/activity_login__pb__loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/eight"
        android:layout_marginBottom="@dimen/eight"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/activity_login__tb__access_mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_login__et__password"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/activity_login__img__logo"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="@dimen/eight"
        android:layout_marginBottom="@dimen/eight"
        android:contentDescription="@string/default_content_description"
        app:layout_constraintBottom_toTopOf="@id/activity_login_tv_title"
        app:layout_constraintEnd_toEndOf="@id/activity_login__et__email"
        app:layout_constraintStart_toStartOf="@id/activity_login__et__email"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_plexus_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>